[package]
name = "railgun"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["thetrung <thetrung.research@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
colored = "2"
serde = "1.0.133"
serde_json = "1.0.74"
reqwest = { version = "0.11.9", features = ["blocking"] }
configparser = "2.0.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

